fix: added pelaksana in patch /distribusi payload
