# docs/swagger.json
@@ -2486,8 +2486,20 @@
                 "komentar": {
                     "type": "string"
                 },
+                "pelaksana": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "permintaan_id": {
                     "type": "string"
+                },
+                "programmer_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
